# OCR-Post-til-doren

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/utilities/: image_io.py
