[project]
name = "OCR-project"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.11",
    "img2table>=1.4.2",
    "matplotlib>=3.10.8",
    "opencv-python>=4.13.0.90",
    "pandas>=3.0.0",
    "pdf2image>=1.17.0",
    "pillow>=12.1.0",
    "pydantic>=2.10.6",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.0.1",
    "timm>=1.0.24",
    "torch>=2.10.0",
    "transformers>=5.0.0",
    "uvicorn>=0.34.0",
]

[tool.ruff]
fix = true

[tool.mypy]
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = false

[tool.uv]
dev-dependencies = [
    "ruff",
    "pre-commit",
    "mypy",
    "debugpy>=1.8.13",
    "pytest>=8.3.5",
    "httpx>=0.28.1",
]
